--- a/index.html
+++ b/index.html
@@ -41,6 +41,71 @@
                 <img src="" alt="My Image">
             </div>
         </div>
+        <div class="about-me">
+            <h1 class="about-heading">About Me</h1>
+            <p class="about-summary">
+                Hi, I'm a web developer with a passion for building responsive and user-friendly websites. 
+                I specialize in HTML, CSS, JavaScript, and enjoy creating clean, functional designs. I've 
+                worked on projects like an Amazon clone,Weather App, and a Spanish verb conjugator tool.
+                I'm always looking to improve my skills and stay updated with the latest web technologies. 
+                I enjoy turning ideas into real, working products that people can use and enjoy.
+            </p>
+        </div>
+        <div class="projects">
+            <h1 class="project-name">My Projects</h1>
+            <div class="project-container">
+                <div class="project-card">
+                    <h2 class="project-heading">Weather App</h2>
+                    <p class="project-summary">
+                        This Weather App allows users to search for real-time weather 
+                        information by entering a city name. It fetches live weather 
+                        data from the OpenWeatherMap API and displays key weather details including:
+                        <ul class="project-list">
+                            <li>🌡️ Temperature (in Celsius)</li>
+                            <li>🌥️ Weather Condition Icon (Clear, Clouds, Rain, Snow)</li>
+                        </ul>
+                    </p>
+                    <div class="project-skill">
+                        <p class="project-skill-box">HTML</p>
+                        <p class="project-skill-box">CSS</p>
+                        <p class="project-skill-box">JavaScript</p>
+                    </div>
+                    <button class="resume-btn">View Project</button>
+                </div>
+                <div class="project-card">
+                    <h2 class="project-heading">Spanish Verb Conjugator</h2>
+                    <p class="project-summary">
+                        This project is a simple web-based Spanish Verb Conjugator that 
+                        allows users to input a verb and see its conjugation in the present 
+                        tense for all pronouns (Yo, Tú, Él/Ella/Usted, Nosotros/as, Vosotros/as, 
+                        Ellos/Ellas/Ustedes). It also supports irregular verbs like ser, tener, and estar.
+                        Conjugation Display: Shows the conjugation of regular and irregular verbs in the present tense.
+                    </p>
+                    <div class="project-skill">
+                        <p class="project-skill-box">HTML</p>
+                        <p class="project-skill-box">CSS</p>
+                        <p class="project-skill-box">JavaScript</p>
+                    </div>
+                    <button class="resume-btn">View Project</button>
+                </div>
+                <div class="project-card">
+                    <h2 class="project-heading">Amazon Clone</h2>
+                    <p class="project-summary">
+                        A responsive Amazon-inspired e-commerce website clone 
+                        built using HTML, CSS, and JavaScript. This project replicates 
+                        the core layout and design of the Amazon homepage, showcasing 
+                        front-end development skills and UI/UX practices.
+                        Amazon-style responsive homepage layout
+                        Header with logo, search bar, and navigation links
+                    </p>
+                    <div class="project-skill">
+                        <p class="project-skill-box">HTML</p>
+                        <p class="project-skill-box">CSS</p>
+                    </div>
+                    <button class="resume-btn">View Project</button>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
